--- a/environment.yaml
+++ b/environment.yaml
@@ -13,7 +13,7 @@ dependencies:
       - gradio==3.41.1
       - pydantic==2.0.2
       - albumentations==1.3.0
-      - opencv-contrib-python==4.3.0.36
+      - opencv-contrib-python==4.7.0.68
       - imageio==2.9.0
       - imageio-ffmpeg==0.4.2
       - pytorch-lightning==1.5.0
@@ -45,3 +45,5 @@ dependencies:
       - tensorboardX==2.6
       - tqdm==4.64.1
       - numpy==1.24.1
+      ## https://github.com/huggingface/huggingface-inference-toolkit/issues/92
+      - huggingface_hub<0.26.0
