--- a/pixi.toml
+++ b/pixi.toml
@@ -1,4 +1,5 @@
 [project]
+authors = ["kindredbluespirit <<>>"]
 channels = ["pytorch", "main", "r", "msys2", "nvidia"]
 name = "dragdiff"
 platforms = ["linux-64"]
@@ -17,7 +18,7 @@ torchvision = "==0.15.1"
 gradio = "==3.41.1"
 pydantic = "==2.0.2"
 albumentations = "==1.3.0"
-opencv-contrib-python = "==4.3.0.36"
+opencv-contrib-python = "==4.7.0.68"
 imageio = "==2.9.0"
 imageio-ffmpeg = "==0.4.2"
 pytorch-lightning = "==1.5.0"
@@ -49,3 +50,4 @@ scipy = "==1.10.1"
 tensorboardx = "==2.6"
 tqdm = "==4.64.1"
 numpy = "==1.24.1"
+huggingface-hub = "<0.26.0"
